name:               domdere-preamble
version:            0.0.1
license:            BSD3
license-file:       etc/LICENCE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2014-2017
synopsis:           My own subset of Prelude
category:           Data
description:        My own subset of Prelude
homepage:           https://github.com/domdere/preamble
bug-reports:        https://github.com/domdere/preamble/issues
cabal-version:      >= 1.18
build-type:         Simple
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/domdere/preamble.git

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      array
                      , base < 5 && >= 4
                      , bifunctors          == 5.*
                      , containers
                      , mtl                 == 2.2.*
                      , natural-numbers     == 0.1.*
                      , semigroups          == 0.18.*
                      , split               == 0.2.*
                      , transformers        > 0.3 && <= 0.7

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:    Preamble

test-suite              quickcheck
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     quickcheck
    build-depends:      base                >= 4 && < 5
                    ,   QuickCheck          == 2.7.6
                    ,   domdere-preamble
